--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,8 @@ html,body{
 	height:100%;
 	margin:0;
 	overflow-y:hidden; 
+	font-size:14px;
+	color:#333;
 }
 
 .hd{
@@ -37,6 +39,63 @@ html,body{
 	height:100%;
 	margin-right:-300px;
 	border-right:1px solid #bbb;
+}
+
+.title{
+	font-weight: bold;
+}
+
+.item{
+	display:inline-block;
+	width:60px;
+	height:60px;
+	font-size:12px;
+	text-align: center;
+	color:#666;
+}
+.item-img{
+	display:block;
+	width:24px;
+	height:32px;
+	margin:0 auto;
+	background-image:url(../images/icons.png);
+}
+
+.item-img.food{
+	background-position: 0px 0px;
+}
+
+.item-img.book{
+	background-position:-109px 0px;
+}
+.item-img.stationary{
+	background-position:-27px 0px;
+}
+.item-img.netbar{
+	width:28px;
+	background-position:-328px 0px;
+}
+.item-img.busstop{
+	background-position:-50px 0px;
+}
+
+.aside .nearby .item-text{
+	height:24px;
+	line-height: 24px;
+}
+
+.sounds{
+	padding-left:10px;
+}
+.words{
+	padding:10px 5px;
+	border-bottom:1px solid #bbb;
+	font-size:12px;
+}
+
+.user a{
+	text-decoration: none;
+	color:#09f;
 }
 
 .aside-hd{
